--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# mine
+**/.spyproject
+**/.pylint.d
+**/__pycache__
+**/bot_config.py
+**/bot_env
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
