--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -4,7 +4,8 @@ click==7.1.2
 fastapi==0.63.0
 h11==0.12.0
 idna==2.10
-numpy==1.19.4
+numpy==1.19.5
+psycopg2==2.8.6
 pydantic==1.7.3
 requests==2.25.1
 starlette==0.13.6
